crates/vize_atelier_sfc/src/script/snapshots/vize_atelier_sfc__script__define_emits__tests__extract_events_call_signature_with_payload.snap
---
source: crates/vize_atelier_sfc/src/script/define_emits.rs
expression: snapshot_emits(&emits)
---
[
    "click",
    "payload",
]
