crates/vize_atelier_sfc/src/script/snapshots/vize_atelier_sfc__script__define_emits__tests__gen_runtime_emits_with_models.snap
---
source: crates/vize_atelier_sfc/src/script/define_emits.rs
expression: emits.as_str()
---
["update:modelValue", "update:count"]
